--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+html,
+body {
+    min-width: 100vw;
+    min-height: 100vh;
+    background-color: lightgray;
+}
+*,
+*:before,
+*:after{
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
